# falcon-eye

./: .gitignore  README.md  commands.md  install.sh  sample_camera.md  test-cameras.md
.cursor/rules/: generic-design.mdc  image-pull-policy.mdc
.github/workflows/: build-push.yml
docs/: API-REFERENCE.md  ARCHITECTURE.md  CODE-REFERENCE.md  CONFIGURATION.md  DESIGN-GATEWAY.md  DEVELOPER.md  INSTALL-GUIDE.md  PLAN-MEDIA-MESSAGES.md  README.md  TOOLS.md  USER-MANUAL.md  test-cameras.md
frontend/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
manifests/: camera-stream.yaml
scripts/cam-manager-py/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/cam-manager-py/app/: auth.py  config.py  database.py  main.py  worker.py
scripts/cam-manager-py/app/chatbot/: __init__.py  graph.py  routes.py  tools.py
scripts/cam-manager-py/app/models/: __init__.py  agent.py  camera.py  chat.py  recording.py  schemas.py  settings.py
scripts/cam-manager-py/app/routes/: __init__.py  agent_chat.py  agents.py  auth.py  cameras.py  cron_routes.py  files.py  internal.py  nodes.py  queue.py  recordings.py  settings.py  tools.py
scripts/cam-manager-py/app/services/: converters.py  k8s.py  settings_service.py
scripts/cam-manager-py/app/tasks/: cleanup.py
scripts/cam-manager-py/app/tools/: __init__.py  handlers.py  registry.py
scripts/cam-manager-py/k8s/: cam-manager.yaml  cleanup-cronjob.yaml
(+36 files in other folders)
