[tool.poetry]
name = "falcon-eye-api"
version = "1.0.0"
description = "Falcon-Eye Camera Manager API - Distributed camera streaming for K8s"
authors = ["Daniel Ogunlolu <daniel@curatelearn.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
kubernetes = "^29.0.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
paramiko = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.2.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 3000"
cleanup = "app.tasks.cleanup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
